feat: implement product management use cases; add AlterarProduto, ConsultarProdutos, and DeletarProduto use cases with corresponding implementations and controller methods